add color on user and add isAdmin also in mondo schema

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT="3000"
 MONGO_URL="mongodb+srv://codenuitydev:u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/StreamWell"
-SECRET="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
+SECRET_KEY="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
