--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT="3000"
 MONGO_URL="mongodb+srv://codenuitydev:u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/StreamWell"
 SECRET_KEY="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
+EMAIL="codenuity.dev@gmail.com"
+PASSWORD="ksqlrdwwrqytudfn"
