--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "",
+  "author": "Codenuity",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
