last commit in ligjht of islam

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URL="mongodb+srv://codenuitydev:u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongod
 SECRET_KEY="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
 EMAIL="codenuity.dev@gmail.com"
 PASSWORD="ksqlrdwwrqytudfn"
+JWT_SECRET=u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str
