completed the index.js config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,11 @@
             "icon": "tools"
         },
         "FIXME": {
-            "icon": "flame"
+            "icon": "flame",
+            "foreground": "white",
+            "iconColour": "orange",
+            "gutterIcon": true,
+            "background": "orange"
         },
         "[ ]": {
             "icon": "issue-draft"
