--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
+    "node-media-server": "^2.6.2",
     "nodemailer": "^6.9.5",
     "otplib": "^12.0.1"
   },
