--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.3.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
