sessin management using localStorage dne

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SECRET_KEY="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
 EMAIL="codenuity.dev@gmail.com"
 PASSWORD="ksqlrdwwrqytudfn"
 JWT_SECRET=u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str
+JWT_EXPIRE=3600s
