--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "chai": "^4.3.8",
     "chai-http": "^4.4.0",
     "cluster": "^0.7.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
