--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT="3000"
 SERVER_TYPE = "dev" #production
 MONGO_URL="mongodb+srv://codenuitydev:u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/StreamWell"
 SECRET_KEY="u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str"
-EMAIL="codenuity.dev@gmail.com"
-PASSWORD="ksqlrdwwrqytudfn"
+EMAIL="skystreampvtltd@gmail.com"
+PASSWORD="nashkogqimtqvfpe"
 JWT_SECRET=u7nXj4Ht0Y0vdcEf@streamwell.wliojvd.mongodb.net/Str
 JWT_EXPIRE=3600s
